sandbox/output
StringCalculatorTest.java:34: error: ';' expected
            int willFail = StringCalculator.add("1,\n"));
                                                       ^
1 error
